CRUD Test completo

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+/*
+HEX #5CD1FF RGB 92, 209, 255 HSL 197, 64%, 68% 
+
+HEX #00457C RGB 0, 69, 124 HSL 207, 100%, 24% 
+
+HEX #FFFFFF RGB 255, 255, 255 HSL 207, 0% 100% 
+*/
+
 body {
   background-color: blue;
 }
